langtools/test/tools/javac/6521805/T6521805d.out
T6521805d.java:41:18: compiler.err.synthetic.name.conflict: this$0, T6521805.Inner
1 error
